test/fail/bad_static_list_close_token.ly
<@lily list[integer] lsi = [10, 20, 30) @>
